--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using TECHMarket
-@namespace TECHMarket.Pages
+@using TechMarket
+@namespace TechMarket.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
