--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -1,18 +1,102 @@
-﻿a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿
+
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+.text-light{
+    color:black;
+    font-size:large;
+}
+.text-light:active {
+    color: yellow !important;
 }
 
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+ul.navbar NavLink, ul.navbar NavLink:active{
+    color:yellow !important;
 }
 
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+.navbar{
+    height: auto !important;
+}
+.navbar-inverse{
+    color: blue;
+}
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+.cwrapper{
+
+}
+
+#cart {
+    background-color: #56baed;
+    border: none;
+    color: white;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 13px;
+     
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 2px 10px 2px 10px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+
+#toggle{
+    right: 50px;
+    position: absolute;
+}
+
+#logo-nav {
+    height: 50px;
+    width: 300px;
+    max-height: 50px;
+    max-width: 300px;
+    height: 50px !important;
+    position: relative;
+}
+
+
+
+.searchTerm:focus {
+    color: #00B4CC;
+}
+
+
+.wrap {
+    width: 30%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    left: 300px;
+}
+.dark {
+    color:black;
+    
+}
+    .dark::after {
+        color:blue;
+    }
+.shadow {
+    box-shadow:10px;
+    background-color:gainsboro;
 }
