--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -1,24 +1,42 @@
-﻿a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿
+
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+.text-light{
+    color:black;
+    font-size:large;
+}
+.text-light:active {
+    color: yellow !important;
 }
 
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+ul.navbar NavLink, ul.navbar NavLink:active{
+    color:yellow !important;
+}
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
-
+.navbar{
+    height: auto !important;
+}
+.navbar-inverse{
+    color: blue;
+}
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+.cwrapper{
 
-.container {
-    position: relative;
 }
 
 #cart {
@@ -31,74 +49,54 @@ html {
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+     
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 5px 20px;
+    margin: 2px 10px 2px 10px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    right: 5%;
 }
 
-#toggle {
+
+#toggle{
     right: 50px;
     position: absolute;
 }
 
 #logo-nav {
-    height: auto;
-    width: auto;
-    max-height: 72px;
-    max-width: 250px;
-    position: absolute;
-}
-
-.search {
-    width: 100%;
+    height: 50px;
+    width: 300px;
+    max-height: 50px;
+    max-width: 300px;
+    height: 50px !important;
     position: relative;
-    display: flex;
-}
-
-.searchTerm {
-    width: 100%;
-    border: 3px solid #00B4CC !important;
-    padding: 5px;
-    height: 20px;
-    border-radius: 20px 0 0 20px !important;
-    outline: none;
-    color: #9DBFAF;
-}
-
-    .searchTerm:focus {
-        color: #00B4CC;
-    }
-
-.searchButton {
-    width: 36px;
-    height: 36px;
-    border: 3px solid #00B4CC;
-    background: #00B4CC;
-    text-align: left;
-    color: #fff;
-    border: none;
-    border-radius: 0 20px 20px 0;
-    cursor: pointer;
-    font-size: 15px;
-    margin: 5px 0px 5px 0px;
-    text-align: center;
 }
 
 
-/*Resize the wrap to see the search bar change!*/
+
+.searchTerm:focus {
+    color: #00B4CC;
+}
+
+
 .wrap {
-    width: 50%;
+    width: 30%;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     display: block;
     left: 300px;
+}
+.dark {
+    color:black;
+    
+}
+    .dark::after {
+        color:blue;
+    }
+.shadow {
+    box-shadow:10px;
+    background-color:gainsboro;
 }
